WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112118
[Gtk] NBSP are not replaced when using X clipboard
https://bugs.webkit.org/show_bug.cgi?id=112118
Summary
[Gtk] NBSP are not replaced when using X clipboard
Tomas Popela
Reported
2013-03-12 02:15:47 PDT
We're not replacing nbsp with spaces when using X clipboard (Shift+Insert or middle mouse button).
Attachments
Proposed patch
(1.98 KB, patch)
2013-03-12 02:26 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2013-03-12 02:26:05 PDT
Created
attachment 192679
[details]
Proposed patch
Martin Robinson
Comment 2
2013-03-12 07:48:20 PDT
Comment on
attachment 192679
[details]
Proposed patch Thanks.
WebKit Review Bot
Comment 3
2013-03-12 07:53:31 PDT
Comment on
attachment 192679
[details]
Proposed patch Clearing flags on attachment: 192679 Committed
r145542
: <
http://trac.webkit.org/changeset/145542
>
WebKit Review Bot
Comment 4
2013-03-12 07:53:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug