[Gtk] NBSP are not replaced when using X clipboard https://bugs.webkit.org/show_bug.cgi?id=112118

Patch by Tomas Popela <tpopela@redhat.com> on 2013-03-12
Reviewed by Martin Robinson.

We're not replacing nbsp with spaces when using X clipboard
(Shift+Insert or middle mouse button).

* platform/gtk/DataObjectGtk.cpp:
(WebCore::DataObjectGtk::text):

Canonical link: https://commits.webkit.org/130468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145542 268f45cc-cd09-0410-ab3c-d52691b4dbfc